ref: widen exception range