@@ -2,18 +2,13 @@ package cam72cam.mod.item;
 
 import cam72cam.mod.config.ConfigFile;
 import cam72cam.mod.event.CommonEvents;
-import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.ItemTags;
-import net.minecraft.tags.Tag;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
-import net.minecraft.data.DataGenerator;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.Items;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.Blocks;
 import net.minecraftforge.common.Tags;
 import net.minecraftforge.registries.ForgeRegistries;
 
@@ -150,12 +145,12 @@ public class Fuzzy {
     public List<ItemStack> enumerate() {
         //Standalone elements apart from datapack
         List<ItemStack> stacks = new ArrayList<>(cache);
-        stacks.addAll(includes.stream().map(Fuzzy::enumerate).flatMap(List::stream).collect(Collectors.toList()));
+        stacks.addAll(includes.stream().map(Fuzzy::enumerate).flatMap(List::stream).toList());
         try {
             stacks.addAll(ForgeRegistries.ITEMS.tags().getTag(getTag()).stream()
                              .map(item -> new ItemStack(new net.minecraft.world.item.ItemStack(item)))
                              .toList());
-        } catch (IllegalStateException ignored) {}
+        } catch (Exception ignored) {}
 
         return stacks;
     }
